--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -7,7 +7,7 @@
     <div layout="row" layout-align="space-between center" class="flashcard-top">
         <md-input-container flex="50">
             <input name="name" type="text"
-                   placeholder="Enter flashcard name" autocomplete="off" autofocus required md-no-asterisk ng-model="f.data.name"/>
+                   placeholder="Enter flashcard name" autocomplete="off" autofocus required md-no-asterisk ng-model="f.data.name" />
         </md-input-container>
         <button type="button" ng-click="f.publish()" class="action-btn">Create</button>
     </div>
@@ -21,21 +21,23 @@
             <div flex="50">back</div>
         </div>
         <ol ui-on-drop="true">
-            <li id="drag{{$index}}" class="card-container" ui-on-drop="f.move($data,card)" layout="row" ng-repeat="card in f.data.cards" tabindex="1">
+            <li id="drag{{$index}}" class="card-container" ui-on-drop="f.move($data,card)" layout="row" card-settings="#settings{{$index}}" card-settings-event="click" ng-repeat="card in f.data.cards">
                 <card-form flex="50" slide="card.front" upload="f.upload"></card-form>
                 <card-form flex="50" slide="card.cover" upload="f.upload"></card-form>
-                <button type="button" class="settings-btn" hide-gt-xs>
+                <button type="button" class="settings-btn" hide-gt-xs card-settings-toggler card-settings="#settings{{$index}}" card-settings-event="click">
                     <md-icon md-svg-icon="t:settingMenu"></md-icon>
                 </button>
-                <button type="button" class="drag-btn" drag="{{$index}}" ui-draggable="true" drag-image-element-id="'drag' + $index"><md-icon md-svg-icon="t:headerMenu" tabindex="0"></md-icon></button>
-                <button type="button" class="add-btn" ng-click="f.add($index)"><md-icon md-svg-icon="t:add" tabindex="0"></md-icon></button>
-                <button type="button" class="remove-btn" ng-click="f.removeCard($index)"><md-icon md-svg-icon="t:close" tabindex="0"></md-icon></button>
+                <div class="card-settings" id="settings{{$index}}">
+                    <button type="button" class="drag-btn desktop" drag="{{$index}}" ui-draggable="true" drag-image-element-id="'drag' + $index"><md-icon md-svg-icon="t:headerMenu" tabindex="0"></md-icon></button>
+                    <button type="button" class="add-btn desktop" ng-click="f.add($index)"><md-icon md-svg-icon="t:add" tabindex="0"></md-icon></button>
+                    <button type="button" class="remove-btn desktop" ng-click="f.removeCard($index)"><md-icon md-svg-icon="t:close" tabindex="0"></md-icon></button>
+                </div>
             </li>
             <li layout="row" class="add-card" ng-click="f.add()">
-                <div flex="50">
+                <div flex="50" flex-xs="100">
                     <md-icon md-svg-icon="t:add"></md-icon>
                 </div>
-                <div flex="50"></div>
+                <div flex="50" hide-xs></div>
             </li>
 
         </ol>
@@ -46,7 +48,7 @@
         <textarea ng-model="slide.text" tabindex="-1"></textarea>
         <md-icon ng-if="!slide.image" md-svg-icon="b:image-icon" plupload="upload.url"
                  plupload-options="upload.options(slide)"
-                 plupload-callbacks="upload.callbacks" tabindex="0"></md-icon>
+                 plupload-callbacks="upload.callbacks" tabindex="0" hide-xs></md-icon>
         <div class="image-container">
             <md-progress-circular ng-if="slide.uploadProgress" md-mode="determinate" md-diameter="50" value="{{slide.uploadProgress}}"></md-progress-circular>
             <img width="100" height="100" ng-src="{{slide.image}}" ng-if="slide.image" />
