--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -5,6 +5,10 @@
         max-width: 860px;
         padding: 10px 30px 0 30px;
         margin: 0 auto;
+
+        @media(max-width: 600px) {
+            padding: 10px;
+        }
     }
 
     .flashcard-top {
@@ -41,6 +45,7 @@
             color: @textColorGrey;
             font-size: 16px;
             font-weight: bold;
+            padding-right: 40px;
         }
 
         .flip-btn {
@@ -48,6 +53,10 @@
             line-height: normal;
             min-width: 0;
             padding: 5px 10px;
+
+            @media(max-width: 600px) {
+                display: none;
+            }
 
             md-icon {
                 width: 20px;
@@ -73,22 +82,6 @@
             .displayFlex;
             .align-items(stretch);
             position: relative;
-
-
-            &:focus {
-                .drag-btn, .add-btn, .remove-btn {
-                    display: block;
-                }
-            }
-
-
-            .drag-btn, .add-btn, .remove-btn {
-                display: none;
-
-                &:focus {
-                    display: block;
-                }
-            }
 
             .settings-btn {
                 .displayFlex;
@@ -119,10 +112,12 @@
                     padding-left: 10px;
                     margin: 0;
 
-                    &:focus, &.md-input-focused {
-                        md-icon {
-                            display: block;
-                            outline: none;
+                    @media(min-width: 600px) {
+                        &:focus, &.md-input-focused {
+                            md-icon {
+                                display: block;
+                                outline: none;
+                            }
                         }
                     }
 
@@ -192,38 +187,54 @@
                 }
             }
 
-            .drag-btn {
+            .card-settings {
+                display: none;
                 position: absolute;
-                left: -26px;
-                top: ~"calc(50% - 10px)";
-
-                md-icon {
-                    width: 14px;
-                    height: 14px;
-                    background: @backgroundColor;
-                }
-            }
-
-            .add-btn {
-                position: absolute;
-                bottom: -16px;
-                left: -28px;
-
-                md-icon {
-                    width: 19px;
-                    height: 19px;
-                }
-            }
-
-            .remove-btn {
-                position: absolute;
-                right: -30px;
+                left: 0;
+                right: 0;
                 top: 0;
                 bottom: 0;
 
-                md-icon {
-                    width: 15px;
-                    height: 15px;
+
+                .drag-btn {
+                    @media(min-width: 600px) {
+                        position: absolute;
+                        left: -26px;
+                        top: ~"calc(50% - 10px)";
+                    }
+
+                    md-icon {
+                        width: 14px;
+                        height: 14px;
+                        background: @backgroundColor;
+                    }
+                }
+
+                .add-btn {
+                    @media(min-width: 600px) {
+                        position: absolute;
+                        bottom: -16px;
+                        left: -28px;
+                    }
+
+                    md-icon {
+                        width: 19px;
+                        height: 19px;
+                    }
+                }
+
+                .remove-btn {
+                    @media(min-width: 600px) {
+                        position: absolute;
+                        right: -30px;
+                        top: 0;
+                        bottom: 0;
+                    }
+
+                    md-icon {
+                        width: 15px;
+                        height: 15px;
+                    }
                 }
             }
         }
@@ -248,7 +259,11 @@
 
 
         .card-container, .add-card {
-            margin: 14px 0;
+            margin: 8px 0;
+
+            @media(min-width: 600px) {
+                margin: 14px 0;
+            }
         }
     }
 }
