--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/GeneralWithStatic.less
@@ -60,7 +60,9 @@
 }
 //.mixin-loop (0) {}
 .mixin-loop(@iterations);
-
+.lowercase{
+    text-transform:lowercase;
+}
 button {
     border: 0;
     background: transparent;
