--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/Password.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/Password.cshtml
@@ -14,7 +14,7 @@
                 </div>
             </md-input-container>
             <md-input-container>
-                <label>@AccountResource.NewPassword</label>
+                <label>@Zbang.Cloudents.Mvc4WebRole.Models.Account.Resources.AccountSettingsResources.NewPassword</label>
                 <input required md-no-asterisk minlength="6" name="new" type="password" ng-model="p.new" />
                 <div ng-messages="passwordForm.new.$error" ng-show="passwordForm.new.$dirty">
                     <div ng-message="required">@GeneralResources.RequiredField</div>
