--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/Settings2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/Settings2.cshtml
@@ -3,7 +3,7 @@
 <div class="accountPage-wrapper">
     <div class="page-head">
         <div class="page-title">
-            <h1>@AccountResource.Settings</h1>
+            <h1>@Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources.IndexResources.Settings</h1>
         </div>
     </div>
     <md-tabs class="page-tabs">
