--- a/Zbang.Cloudents.Mvc4WebRole/Views/Account/SignIn.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Account/SignIn.cshtml
@@ -81,7 +81,7 @@
                 </div>
                 <div class="form-actions">
                     <button type="reset" class="btn btn-default pull-right cancel">@GeneralResources.Cancel</button>
-                    <button type="submit" class="btn button-Blue btn-primary pull-right">@LogOnResources.Submit</button>
+                    <button type="submit" class="btn button-Blue btn-primary pull-right">@GeneralResources.Submit</button>
                 </div>
                 <div class="create-account"></div>
             </form>
