--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
@@ -141,7 +141,7 @@
                             </div>
                             <div class="form-actions">
                                 <button type="reset" class="cancel-btn" data-form-action="login">@GeneralResources.Cancel</button>
-                                <button type="submit" class="action-btn space-before">@LogOnResources.Submit</button>
+                                <button type="submit" class="action-btn space-before">@GeneralResources.Submit</button>
                             </div>
                         </form>
                     </div>
