--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.css
@@ -1099,3 +1099,22 @@ md-menu-item > a.md-button {
   color: #ffffff;
   background-color: #db4437;
 }
+.flashcards-list .content .draft-wpr {
+  background: #888b8e;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.flashcards-list .content .draft-wpr .draft {
+  color: #ffffff;
+  height: auto;
+  font-size: 24px;
+}
+.flashcards-list .content md-icon {
+  width: 40%;
+  fill: rgba(255, 255, 255, 0.5);
+}
