--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -60,7 +60,7 @@
 }
 
 .folder-selected {
-     .folder-name {
+    .folder-name {
         max-width: ~"calc(100% - 40px)";
     }
 
@@ -68,6 +68,7 @@
         width: 100%;
         max-width: ~"calc(100% - 40px)";
     }
+
     margin: 8px 8px 20px 8px;
 
     .folder-name .content {
@@ -296,19 +297,94 @@ md-menu-item > a.md-button {
             animation-iteration-count: 1;
         }
     }
-    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+
+    0% {
+        transform: scale(0);
+    }
+
+    25% {
+        transform: scale(1.1);
+    }
+
+    60% {
+        transform: scale(0.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
+
 @-webkit-keyframes breathing {
-    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+    0% {
+        transform: scale(0);
+    }
+
+    25% {
+        transform: scale(1.1);
+    }
+
+    60% {
+        transform: scale(0.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
+
 @-moz-keyframes breathing {
-    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+    0% {
+        transform: scale(0);
+    }
+
+    25% {
+        transform: scale(1.1);
+    }
+
+    60% {
+        transform: scale(0.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
+
 @-o-keyframes breathing {
-    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+    0% {
+        transform: scale(0);
+    }
+
+    25% {
+        transform: scale(1.1);
+    }
+
+    60% {
+        transform: scale(0.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
+
 @keyframes breathing {
-    0% { transform: scale(0); } 25% { transform: scale(1.1); } 60% { transform: scale(0.5); } 100% { transform: scale(1); }
+    0% {
+        transform: scale(0);
+    }
+
+    25% {
+        transform: scale(1.1);
+    }
+
+    60% {
+        transform: scale(0.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 .box-nav-bar ~ div {
@@ -1106,6 +1182,28 @@ md-menu-item > a.md-button {
             margin: 0;
             color: @textColorWhite;
             background-color: @backgroundColorRed;
+        }
+    }
+}
+
+.flashcards-list {
+    .content {
+        .draft-wpr {
+            background: @textColorGrey;
+            .displayFlex;
+            .justifyContet(center);
+            .align-items(center);
+
+            .draft {
+                color: @textColorWhite;
+                height: auto;
+                font-size: 24px;
+            }
+        }
+
+        md-icon {
+            width: 40%;
+            fill: rgba(255, 255, 255, 0.5);
         }
     }
 }
