--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -13,13 +13,31 @@
     </div>
     <div ng-switch-when="1">
         <h4>cards</h4>
-        <md-progress-linear md-mode="determinate" value="f.slidepos / f.flashcard.cards.length * 100"></md-progress-linear>
+        <md-progress-linear md-mode="determinate" value="{{f.slidepos / f.flashcard.cards.length * 100}}"></md-progress-linear>
         <span>progress</span>
-        <span>f.slidepos/{{::f.flashcard.cards.length}}</span>
-        
-        <button type="button" ng-click="f.">front</button>
-        <button type="button">back</button>
-        <button type="button">both</button>
+        <span>{{f.slidepos}}/{{::f.flashcard.cards.length}}</span>
+
+        <button type="button" ng-click="f.style=null">front</button>
+        <button type="button" ng-click="f.style=2">back</button>
+        <button type="button" ng-click="f.style=3">both</button>
+        <div ng-class="{font: f.style==null,back:f.style==2,both:f.style==3}">
+            <button type="button">pin</button>
+            <div>
+                <img ng-src="{{f.slide.front.image}}" ng-if="f.slide.front.image" alt="font image"/>
+                <p>
+                    {{f.slide.front.text}}
+                </p>
+            </div>
+            <div>
+                <img ng-src="{{f.slide.cover.image}}" ng-if="f.slide.cover.image" alt="font image"/>
+                <p>
+                    {{f.slide.cover.text}}
+                </p>
+            </div>
+        </div>
+        <button type="button" ng-click="f.prev()">left</button>
+        <button type="button" ng-click="f.next()">right</button>
+
     </div>
     <div ng-switch-when="2">
         bye
