--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
@@ -21,7 +21,7 @@
             </md-button>
             <md-menu-content width="1">
                 <md-menu-item>
-                    <md-button @*ng-click="q.deleteQuiz($event,e)"*@ ga-track-event="['box-flashcard', 'didDelete']">
+                    <md-button @*ng-click="q.deleteQuiz($event,e)"*@ ga-track-event="['box-flashcard', 'didEdit']">
                         Edit
                     </md-button>
                 </md-menu-item>
