Continue on flashcard

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Flashcards.cshtml
@@ -13,20 +13,20 @@
     </li>
 
     <li flex flex-gt-lg="10" flex-lg="20" flex-md="25" flex-sm="33" flex-xs="50"
-        class="i-q-wrapper flashcards" ng-repeat="e in f.flashcards">
+        class="i-q-wrapper flashcards" ng-repeat="e in ::f.flashcards">
         <div ng-include="'flashcard-template.html'"></div>
-        <md-menu @*ng-if="b.canDelete(e.ownerId)"*@ class="quiz-menu">
+        <md-menu ng-if="::b.canDelete(e.ownerId)" class="quiz-menu">
             <md-button aria-label="open menu" class="md-icon-button delete" ng-click="app.openMenu($mdOpenMenu, $event)" ga-track-event="['box-flashcard', 'delete']">
                 <md-icon md-svg-icon="t:ThreeDots" class="dots-3 quiz-dots"></md-icon>
             </md-button>
             <md-menu-content width="1">
-                <md-menu-item>
-                    <md-button @*ng-click="q.deleteQuiz($event,e)"*@ ga-track-event="['box-flashcard', 'didEdit']">
+                <md-menu-item ng-if="::f.canEdit(e)">
+                    <md-button ui-sref="flashcardCreate({boxtype: f.params.boxtype, universityType:f.params.universityType, boxId: f.params.boxId, boxName:f.params.boxName, id:e.id})" ga-track-event="['box-flashcard', 'didEdit']">
                         Edit
                     </md-button>
                 </md-menu-item>
                 <md-menu-item>
-                    <md-button @*ng-click="q.deleteQuiz($event,e)"*@ ga-track-event="['box-flashcard', 'didDelete']">
+                    <md-button ng-click="f.deleteFlashcard($event,e)" ga-track-event="['box-flashcard', 'didDelete']">
                         @GeneralResources.Delete
                     </md-button>
                 </md-menu-item>
@@ -34,7 +34,7 @@
         </md-menu>
     </li>
 </ul>
-<script defer type="text/ng-template" id="flashcard-template.html">
+<script type="text/ng-template" id="flashcard-template.html">
     <a class="quiz quiz-template" ng-href="{{::e.url}}">
         <div class="base">
             <div class="quiz-ratio">
@@ -46,13 +46,13 @@
                         <span class="draft">@IndexResources.Draft</span>
                     </div>
                     <div class="bottom">
-                        <h2 class="name ellipsis" ng-bind-html="::e.name"></h2>
+                        <h2 class="name ellipsis" ng-bind="::e.name"></h2>
                     </div>
                 </div>
 
 
             </div>
-            <div class="stats" ng-hide="::e.numOfViews === underfined">
+            <div class="stats" @*ng-hide="::e.numOfViews === underfined"*@>
                 <div class="views">
                     {{::e.numOfViews}} <md-icon md-svg-icon="b:eye"></md-icon>
                 </div>
