--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -16,10 +16,10 @@
         <md-progress-linear md-mode="determinate" value="{{f.slidepos / f.flashcard.cards.length * 100}}"></md-progress-linear>
         <span>progress</span>
         <span>{{f.slidepos}}/{{::f.flashcard.cards.length}}</span>
-        <button type="button" ng-click="f.style=null">front</button>
-        <button type="button" ng-click="f.style=2">back</button>
-        <button type="button" ng-click="f.style=3">both</button>
-        <div ng-class="{font: f.style==null,back:f.style==2,both:f.style==3}">
+        <button type="button" ng-click="f.style=true">front</button>
+        <button type="button" ng-click="f.style=false">back</button>
+        <button type="button" ng-click="f.style=null">both</button>
+        <div ng-init="f.style=true" ng-class="{font: f.style==true,back:f.style==false,both:f.style==null}">
             <button type="button">pin</button>
             <div>
                 <img ng-src="{{f.slide.front.image}}" ng-if="f.slide.front.image" alt="font image"/>
@@ -33,6 +33,7 @@
                     {{f.slide.cover.text}}
                 </p>
             </div>
+            <button type="button" ng-if="f.style !== null" ng-click="f.style = !f.style">flip</button>
         </div>
         <button type="button" ng-click="f.prev()">left</button>
         <button type="button" ng-click="f.next()">right</button>
@@ -45,7 +46,7 @@
                         '1': '1 card!',
                         'other': '{} cards!'
                       }"></ng-pluralize>
-        <button type="button">Start over</button>
+        <button type="button" ng-click="f.start()">Start over</button>
         <button type="button">Study 2 pinned card</button>
         <md-switch ng-model="f.shuffle">
             shuffle cards
