started cards design

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/variables.less
@@ -314,7 +314,7 @@
         width: ~"calc(100% + 260px)";
     }
 
-    margin-top: -5px;
+    //margin-top: -5px;
 }
 
 .transition(@property, @duration, @effect) {
