--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/CreatePartial.cshtml
@@ -14,7 +14,7 @@
                 <div ng-message="required">@GeneralResources.RequiredField</div>
             </div>
         </md-input-container>
-        <button type="button" ng-click="f.publish()" class="action-btn">@GeneralResources.Create</button>
+        <button type="button" ng-click="f.publish()" ng-disabled="f.disabled" class="action-btn">@GeneralResources.Create</button>
     </div>
     <div class="flashcard-body">
         <div layout="row" layout-align="space-between center" class="header">
